further tweaking mobile nav... difficult to troubleshoot as can only see the issue on iphone

--- a/style.scss
+++ b/style.scss
@@ -231,7 +231,7 @@ nav {
     }
 
     @include mobile {
-      margin: 0 .7em;
+      margin: 0 .5em;
       color: $maya;
     }
   }
